# actix-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  log4rs.yml  version.json
.github/workflows/: rust.yml
src/: constants.rs  main.rs
src/api/: auth_api.rs  hello_api.rs  location_api.rs  mod.rs  ping_api.rs  user_api.rs
src/auth/: claims.rs  mod.rs
src/config/: db.rs
src/handler/: error_handler_middleware.rs  mod.rs
src/models/: auth_model.rs  error_model.rs  location_model.rs  mod.rs  user_list_response.rs  user_model.rs
src/repository/: auth_repo.rs  mod.rs  mongodb_repo.rs  user_repo.rs
src/services/: auth_service.rs  location_service.rs  mod.rs  user_service.rs
