[package]
name = "actix-api"
version = "0.2.1"
edition = "2021"
authors = ["Bala", "dummy@c12.io"]
description = "Actix web API application with MongoDB backend store"
readme = "README.md"
license = "MIT"
keywords = ["API", "actix-web", "mongodb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix core web
actix-web = "4"

# logging
log = "0"
log4rs = "1"

# mongodb driver
mongodb = "2"

# JSON Seralizer
serde = { version = "1.0", features = ["derive"] }

# Utils
futures = "0"
validator = { version = "0", features = ["derive"] }
chrono = "0"
dotenv = "0"
nanoid = "0"
derive_more = "0"

