[package]
name = "actix-api"
version = "0.5.0"
edition = "2021"
authors = ["Bala", "dummy@c12.io"]
description = "Actix web API application with MongoDB backend store"
readme = "README.md"
license = "MIT"
keywords = ["API", "actix-web", "mongodb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to Reduce the size of release binary.
# Reduced from 22M to 6.8M (more than 1/3 the original size)
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
# actix core web
actix-web = "4"

# logging
log = "0"
log4rs = "1"

# mongodb driver
mongodb = "2"
bson = { version = "2", features = ["chrono-0_4"]}

# JSON Seralizer
serde = { version = "1", features = ["derive"] }

# User authenttication and authorization
jsonwebtoken = "8"
actix-web-grants = "3"
actix-web-httpauth = "0"
rust-argon2 = "1"

# request validation
validator = { version = "0", features = ["derive"] }

# CORS
actix-cors = "0"

# Utils
futures = "0"
chrono = "0"        # for date and time
dotenvy = "0"       # for environment properties
nanoid = "0"        # to generate unique ids
derive_more = "0"
openssl = { version = "0", features = ["vendored"] }

# REST Clinet calls.
reqwest = { version = "0.11", features = ["json"] }
